# cpp_advanced_programming

./: README.md
tpa-cpp-oggetti/: main.cpp
tpa-cpp-oggetti/include/: ClosedLoop.h
tpa-cpp-oggetti/include/liblinalg/: Matrix.h  MatrixBase.h  Vector.h
tpa-cpp-oggetti/include/libsimcon/: Controllable.h  Controller.h  Simulable.h  Simulator.h
tpa-cpp-oggetti/src/: ClosedLoop.cpp  Controller.cpp  Matrix.cpp  MatrixBase.cpp  Simulator.cpp  Vector.cpp
tpa-cpp-oggetti/tests/: linAlgMatBaseTests.cpp  linAlgVecTests.cpp  linalgTestsMat.cpp  simconTests.cpp
tpa-cpp-procedurale/: CMakeLists.txt  README.md  main.cpp
tpa-cpp-procedurale/include/catch2/: catch2.hpp
tpa-cpp-procedurale/include/liblinsys/: mimo.h  mimo_struct.h  siso.h
tpa-cpp-procedurale/src/: mimo.cpp  mimo_struct.cpp  siso.cpp
tpa-cpp-procedurale/test/: CMakeLists.txt  catch2Main.cpp  test_mimo.cpp  test_mimo_struct.cpp  test_siso.cpp
